tests/baselines/reference/jsxFactoryAndJsxFragmentFactoryNull.errors.txt
jsxFactoryAndJsxFragmentFactoryNull.tsx(3,1): error TS6267: Cannot find name 'null', the fragment factory, which is required to use fragments.


==== jsxFactoryAndJsxFragmentFactoryNull.tsx (1 errors) ====
    declare var h: any;
    
    <></>;
    ~~
!!! error TS6267: Cannot find name 'null', the fragment factory, which is required to use fragments.
    <><span>1</span><><span>2.1</span><span>2.2</span></></>;